fix video on mobile + pdf

--- a/app/assets/stylesheets/application/pages/home.scss
+++ b/app/assets/stylesheets/application/pages/home.scss
@@ -290,6 +290,15 @@
   }
 }
 
+#video-modal {
+  #ytplayer {
+    width: 100%;
+    @include bp-small {
+      margin-top: 10%;
+    }
+  }
+}
+
 footer {
   margin-bottom: 25px;
   .social-icon {
